# monodex

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile
.github/workflows/: ci.yaml
docs/: backlog.md  code_organization_policy.md  smoke_test.md
docs/design/: architecture.md  chunker.md  concurrency.md  crawl.md  label_ids.md  monodex_files.md  search.md
examples/: config.json  monodex-config.json
reserved-names/monodex-core/: Cargo.toml  LICENSE  README.md
reserved-names/monodex-protocol/: Cargo.toml  LICENSE  README.md
reserved-names/monodex-sdk/: Cargo.toml  LICENSE  README.md
reserved-names/monodex-sdk/src/: lib.rs
schemas/: config.schema.json  context.schema.json  crawl.schema.json  editing.md
scripts/: check-facades.sh
src/: main.rs  paths.rs
src/app/: chunk_display.rs  chunk_selector.rs  cli.rs  config.rs  context.rs  lock_progress.rs  mod.rs  number_format.rs  search.rs  terminal_output.rs  util.rs
src/app/commands/: audit_chunks.rs  crawl.rs  debug_fts.rs  dump_chunks.rs  init_db.rs  mod.rs  purge.rs  search.rs  test_fixtures.rs  test_helpers.rs  use_cmd.rs  view.rs
src/app/config/: tests.rs
src/app/crawl/: mod.rs  phases.rs  pipeline.rs  preamble.rs  progress_format.rs  summary.rs  types.rs  warning.rs
src/app/search/: tests.rs
src/engine/: breadcrumb.rs  chunker.rs  crawl_config.rs  fusion.rs  git_ops.rs  identifier.rs  identity.rs  markdown_partitioner.rs  mod.rs  package_lookup.rs  parallel_embedder.rs  retrieval.rs  schema.rs  search_decision.rs  system_info.rs  util.rs  warning.rs  working_dir_sentinel.rs
src/engine/chunker/: tests.rs
src/engine/fts/: error.rs  index.rs  indexing.rs  manifest.rs  mod.rs  schema.rs  search.rs  tests.rs  tokenizer.rs
src/engine/fusion/: tests.rs
src/engine/git_ops/: blob_source.rs  commit.rs  mod.rs  package_index.rs  tests.rs  working_dir.rs
src/engine/partitioner/: debug.rs  mod.rs  node_analysis.rs  partition.rs  scoring.rs  split_search.rs  tests.rs  (+1 more)
test_artifacts/: test.md
tests/: active_labels_preserve.rs  fts_integration.rs  index_lifecycle.rs  label_add.rs  search_decision.rs  search_output.rs  vector_preserve.rs
tests/common/: mod.rs
tests/fixtures/: git.rs  mod.rs  storage.rs
(+26 files in other folders)
