[package]
name = "monodex"
version = "0.6.1"
edition = "2024"
rust-version = "1.93"
description = "Fast, accurate code search for large Rush monorepos"
license = "MIT"
repository = "https://github.com/microsoft/monodex"
keywords = ["semantic-search", "monorepo", "embeddings", "code-search"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
exclude = [
    "test_artifacts/*",
    "scripts/*",
    "tests/*",
    "*.log",
    "crawl.log",
    "monodex.log",
    "temp.log",
]

[dependencies]
# ML/Embeddings
ort = { version = "2.0.0-rc.12", features = ["download-binaries"] }
tokenizers = "0.23.1"
hf-hub = "0.5.0"

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Git operations
gix = { version = "0.84", features = ["blob-diff", "revision"] }

# File system
walkdir = "2.5.0"

# Serialization
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.150"
json_comments = "0.2"

# Vector database (LanceDB - embedded, in-process)
lancedb = "0.29"
arrow-array = "58"
arrow-schema = "58"
arrow-buffer = "58"

# Async runtime (needed for LanceDB)
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures = "0.3"

# Utilities
anyhow = "1.0.93"
thiserror = "2.0"
time = "0.3"
globset = "0.4"
dirs = "6.0"
twox-hash = "2.1"
sha2 = "0.11"
hex = "0.4"
github-slugger = "0.1"
rayon = "1.12"
fs4 = "1.1"
crossbeam-channel = "0.5"
sysinfo = "0.38"
terminal_size = "0.4"

# Tree-sitter for AST parsing
tree-sitter = "0.26"
tree-sitter-typescript = "0.23"
rand = "0.10"

# Full-text search (Tantivy)
tantivy = "0.26"
jieba-rs = "0.9"

[dev-dependencies]
insta = { version = "1.47", features = ["yaml"] }
jsonschema = "0.46"
tempfile = "3"
serial_test = "3"

[features]
default = []
coreml = ["ort/coreml"]
