[package]
name = "monodex-sdk"
version = "0.0.1"
edition = "2024"
description = "Reserved-name placeholder for the Monodex project."
license = "MIT"
repository = "https://github.com/microsoft/monodex"
readme = "README.md"
include = ["src/**/*", "README.md", "LICENSE"]

[lib]
path = "src/lib.rs"

[workspace]
